--- a/app/src/main/res/drawable/chatspage_seperator_box.xml
+++ b/app/src/main/res/drawable/chatspage_seperator_box.xml
@@ -5,7 +5,7 @@
     android:insetLeft="-2dp">
 
     <shape android:shape="rectangle">
-        <stroke android:width="2dp" android:color="#C4C4C4" />
+        <stroke android:width="1dp" android:color="#CFCECE" />
         <solid android:color="#FFFFFF" />
     </shape>
 
