--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -25,9 +25,9 @@
         android:textAlignment="center"
         android:textColor="#FF0000"
         android:textStyle="bold"
-        android:layout_marginTop="-20dp"
+        android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/header_layout"/>
+        android:layout_above="@id/shutter_button"/>
 
     <RelativeLayout
         android:id="@+id/header_layout"
@@ -45,14 +45,6 @@
             android:layout_height="25dp"
             android:layout_alignParentStart="true"
             android:background="@drawable/profile" />
-
-        <Button
-            android:id="@+id/search_button"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="20dp"
-            android:layout_toRightOf="@id/profile_button"
-            android:background="@drawable/search" />
 
         <Button
             android:id="@+id/addfriend_button"
@@ -86,42 +78,26 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/control_dock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/shutter_button"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@drawable/shutter"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/nav_dock"
-        android:layout_marginBottom="40dp"
-        android:orientation="horizontal">
+        android:layout_marginBottom="40dp"/>
 
-        <Button
-            android:id="@+id/memories_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleY="0.6"
-            android:scaleX="0.6"
-            android:layout_marginHorizontal="30dp"
-            android:background="@drawable/gallery"/>
-
-        <Button
-            android:id="@+id/shutter_button"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/shutter"
-            android:scaleY="1.0"
-            android:scaleX="1.0"/>
-
-        <Button
-            android:id="@+id/filter_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleY="0.6"
-            android:scaleX="0.6"
-            android:layout_marginHorizontal="30dp"
-            android:background="@drawable/filters"/>
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/memories_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleY="0.6"
+        android:scaleX="0.6"
+        android:layout_marginHorizontal="20dp"
+        android:layout_toLeftOf="@id/shutter_button"
+        android:layout_alignBottom="@id/shutter_button"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/gallery"/>
 
     <LinearLayout
         android:id="@+id/nav_dock"
@@ -134,21 +110,21 @@
 
         <Button
             android:id="@+id/chats_button"
-            android:layout_width="30dp"
+            android:layout_width="35dp"
             android:layout_height="30dp"
             android:layout_marginHorizontal="30dp"
             android:background="@drawable/chat"/>
 
         <Button
             android:id="@+id/Camerapage_button"
-            android:layout_width="30dp"
+            android:layout_width="35dp"
             android:layout_height="30dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/camera_highlighted"/>
 
         <Button
             android:id="@+id/Stories_button"
-            android:layout_width="30dp"
+            android:layout_width="35dp"
             android:layout_height="30dp"
             android:layout_marginHorizontal="30dp"
             android:background="@drawable/stories"/>
