--- a/app/src/main/res/layout/activity_chatspage.xml
+++ b/app/src/main/res/layout/activity_chatspage.xml
@@ -19,26 +19,18 @@
 
         <Button
             android:id="@+id/profile_button"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/profile_purple"/>
-
-        <Button
-            android:id="@+id/search_button"
-            android:layout_marginStart="20dp"
-            android:layout_toEndOf="@id/profile_button"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/search_purple"/>
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:background="@drawable/profile_purple" />
 
         <TextView
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chats"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_marginStart="85dp"
-            android:textColor="#061F4D"
+            android:textColor="#2b2e70"
             android:textStyle="bold"/>
 
 
@@ -46,8 +38,8 @@
             android:layout_alignParentEnd="true"
             android:id="@+id/addfriend_button"
             android:layout_marginStart="120dp"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
             android:scaleY="1.2"
             android:scaleX="1.2"
             android:background="@drawable/add_person_filled_purple"/>
@@ -77,37 +69,33 @@
         android:layout_weight="1.5"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/dock"
-            android:layout_marginHorizontal="60dp"/>
         <LinearLayout
             android:id="@+id/nav_dock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="25dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/stroke_box"
+            android:elevation="6dp"
+            android:paddingVertical="15dp">
 
             <Button
                 android:id="@+id/chats_button"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginHorizontal="30dp"
                 android:background="@drawable/chat_highlighted"/>
 
             <Button
                 android:id="@+id/Camerapage_button"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/camera"/>
 
             <Button
                 android:id="@+id/Stories_button"
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginHorizontal="30dp"
                 android:background="@drawable/stories_grey"/>
