--- a/app/src/main/res/layout/activity_memories.xml
+++ b/app/src/main/res/layout/activity_memories.xml
@@ -7,18 +7,35 @@
     android:layout_height="match_parent"
     tools:context=".Memories_Activity">
 
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="35dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:scaleY="0.7"
+        android:scaleX="0.7"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/down_arrow_purple" />
+
+    <TextView
+        android:id="@+id/memories_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Memories"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textColor="#2b2e70"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@id/back_button"
+        android:layout_marginTop="10dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/back_button"
-            android:layout_width="25dp"
-            android:layout_height="15dp"
-            android:background="@drawable/down_arrow_purple"
-            android:layout_margin="20dp"/>
-
+        android:orientation="vertical"
+        android:layout_below="@id/back_button">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/memories_recycler"
