--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -17,9 +17,9 @@
             android:layout_marginStart="15dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:scaleY="1.2"
-            android:scaleX="1.2"
-            android:background="@drawable/drop_down_arrow_icon_purple"/>
+            android:scaleY="0.3"
+            android:scaleX="0.5"
+            android:background="@drawable/down_arrow_purple"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="Profile"
-            android:textColor="#061F4D"
+            android:textColor="#2b2e70"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -38,6 +38,7 @@
             android:layout_marginEnd="15dp"
             android:scaleY="0.9"
             android:scaleX="0.9"
+            android:layout_marginTop="5dp"
             android:background="@drawable/settings_icon_purple"
             android:layout_alignParentEnd="true"/>
     </RelativeLayout>
@@ -49,7 +50,8 @@
         android:layout_height="200dp"
         android:src="@drawable/default_profile"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:elevation="10dp"/>
 
 
     <!-- Username -->
@@ -62,7 +64,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp" />
 
     <!-- Name -->
     <TextView
@@ -83,25 +85,27 @@
         android:text="  Stories"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="#2b2e70"
         android:layout_marginTop="20dp"/>
 
 
     <LinearLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/white_box_rounded"
+        android:layout_height="70dp"
+        android:background="@drawable/stroke_box"
         android:weightSum="6"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:elevation="6dp"
+        android:layout_marginHorizontal="20dp">
 
         <View
             android:layout_marginLeft="15dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:scaleX="0.6"
-            android:scaleY="0.6"
+            android:scaleX="0.7"
+            android:scaleY="0.5"
             android:background="@drawable/camera_icon_grey"/>
 
         <TextView
@@ -119,8 +123,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:scaleX="0.6"
-            android:scaleY="0.6"
+            android:scaleX="0.7"
+            android:scaleY="0.5"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/option_icon_grey"/>
 
     </LinearLayout>
@@ -132,7 +137,7 @@
         android:text="  Friends"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="#2b2e70"
         android:layout_marginTop="20dp"/>
 
 
@@ -140,8 +145,10 @@
         android:id="@+id/acceptfriends_button"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/white_box_rounded"
+        android:layout_height="70dp"
+        android:background="@drawable/stroke_box"
+        android:elevation="6dp"
+        android:layout_marginHorizontal="20dp"
         android:padding="5dp"
         android:weightSum="6"
         android:orientation="horizontal">
@@ -151,7 +158,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:scaleX="0.7"
+            android:scaleX="0.8"
             android:scaleY="0.7"
             android:background="@drawable/add_person_icon_grey"/>
 
